--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 This was built with LOVE version 11.2. It has not been tested with other versions.
 
-![](https://gfycat.com/tepidalarminganaconda.gif)
+![Image](https://gfycat.com/tepidalarminganaconda.gif)
 
 https://love2d.org/
